# api-financial-py

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_create_users_table.py  002_remove_name_from_users.py  003_create_categories_table.py  004_create_transactions_table.py
app/: main.py
app/api/: deps.py
app/api/routers/: __init__.py  assets.py  auth.py  categories.py  dashboard.py  investments.py  portfolio.py  transactions.py
app/core/: config.py  exceptions.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  asset.py  category.py  investment_transaction.py  transaction.py  user.py
app/repositories/: __init__.py  asset_repository.py  category_repository.py  dashboard_repository.py  investment_repository.py  transaction_repository.py  user_repository.py
app/schemas/: asset.py  auth.py  category.py  common.py  dashboard.py  investment.py  portfolio.py  transaction.py  user.py
app/services/: auth_service.py  category_service.py  dashboard_service.py  investment_service.py  portfolio_service.py  transaction_service.py
tests/: conftest.py  test_auth.py  test_categories.py  test_dashboard.py  test_investments.py  test_portfolio.py  test_transactions.py
tests/test_api/: test_deps.py
tests/test_core/: test_security.py
tests/test_db/: test_session.py
tests/test_repositories/: test_asset_repository.py  test_category_repository.py  test_transaction_repository.py  test_user_repository.py
tests/test_routers/: test_auth.py  test_categories.py  test_main.py  test_transactions.py
tests/test_schemas/: test_category_schema.py  test_dashboard.py
tests/test_services/: test_auth_service.py  test_category_service.py  test_dashboard_service.py  test_transaction_service.py
