[project]
name = "financial-py"
version = "0.1.0"
description = "Financial API"
readme = "README.md"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    ".ruff_cache",
    "alembic/versions",
    "build",
    "dist",
]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (deixar para o formatter)
    "B008",   # do not perform function calls in argument defaults (FastAPI Depends() é intencional)
]
