[project]
name = "financial-py"
version = "0.1.0"
description = "Financial API"
readme = "README.md"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    ".ruff_cache",
    "alembic/versions",
    "build",
    "dist",
]

[tool.ruff.format]
quote-style = "double"



[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (deixar para o formatter)
    "B008",   # do not perform function calls in argument defaults (FastAPI Depends() é intencional)
    "UP045",
]
fixable = ["ALL"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["jose", "jose.*", "boto3", "boto3.*", "botocore", "botocore.*"]
ignore_missing_imports = true
